--- a/Public/css/h_style.css
+++ b/Public/css/h_style.css
@@ -3,11 +3,6 @@
 /* ====================
      公共样式
 ==================== */
-body{background:#fff; font-size:12px; font-family:"宋体",Verdana, Arial; line-height:150%; margin:0; padding:0; color:#404040;}
-div{margin:0 auto; padding:0; }
-h1,h2,h3,h4,h5,h6,ul,li,dl,dt,dd,form,img,p{
-margin:0; padding:0; border:none; list-style-type:none; 
-}
 
 a { TEXT-DECORATION: none; }
 
@@ -70,13 +65,15 @@ PADDING-TOP: 0px;
 	PADDING-TOP: 0px
 	display:inline;
 }
-.quick-menu {
+.quick-menu ,.quick-menu2{
 
-	PADDING-BOTTOM: 0px;  ZOOM: 1; FLOAT: right; OVERFLOW: hidden; PADDING-TOP: 0px; margin-right:100px;
+	PADDING-BOTTOM: 0px;  ZOOM: 1; FLOAT: right; OVERFLOW: hidden; PADDING-TOP: 0px; 
 
 }
+.quick-menu {margin-right:100px;}
+.quick-menu2 {margin-right:20px;}
 
-.quick-menu LI {
+.quick-menu LI,.quick-menu2 LI{
 
 	PADDING-BOTTOM: 0px; PADDING-LEFT: 8px; PADDING-RIGHT: 8px; DISPLAY: block; BACKGROUND: url(../images/bj_jiange.png) no-repeat right; FLOAT: left; PADDING-TOP: 0px
 
@@ -141,7 +138,7 @@ PADDING-TOP: 0px;
 .headNav .navCon .navCon-cate .navCon-cate-title a:hover{ text-decoration:none;}
 .headNav .navCon .navCon-cate .cateMenu{ position:absolute; left:0px; font-family:"微软雅黑"; box-shadow:4px 2px 5px rgba(0, 0, 0, 0.3); background:#FFFFFF; cursor:pointer;}
 .headNav .navCon .navCon-cate .cateMenu li{ width:200px;overflow:hidden; border-bottom:1px solid #F0F0F0;border-top:1px solid #F0F0F0;}
-.headNav .navCon .navCon-cate .cateMenu li .cate-tag{ width:190px; padding:10px 5px 10px 15px; overflow:hidden; line-height:25px;}
+.headNav .navCon .navCon-cate .cateMenu li .cate-tag{ width:190px; padding:10px 5px 10px 15px; overflow:hidden; line-height:25px; z-index: 1000;}
 .headNav .navCon .navCon-cate .cateMenu li .cate-tag strong{ height:25px; line-height:25px; width:172px; display:block; text-indent:0px; background:url(../images/index_new_bg.png) 160px -128px no-repeat;}
 .headNav .navCon .navCon-cate .cateMenu li .cate-tag strong a{ font-size:14px; font-weight:bold; color:#2E7500;}
 .headNav .navCon .navCon-cate .cateMenu li .cate-tag .listModel{text-indent:0px; }
@@ -154,7 +151,7 @@ PADDING-TOP: 0px;
 .float-list-dnav a {color: #585858;margin: 0 10px 0 10px;}
 .float-list-dnav a:hover{ color:#585858;}
 
-.headNav .navCon .navCon-cate .cateMenu .list-item{ width:650px; padding:10px 10px 20px 10px; border:1px solid #A7A7A7; border-left:none; background:#FFFFFF; box-shadow:4px 3px 5px rgba(0, 0, 0, 0.5); background:url(../image/catemenubg.png) repeat-y #FFF; position:absolute; left:200px; top:0px;}
+.headNav .navCon .navCon-cate .cateMenu .list-item{ width:650px; padding:10px 10px 20px 10px; border:1px solid #A7A7A7; border-left:none; background:#FFFFFF; box-shadow:4px 3px 5px rgba(0, 0, 0, 0.5); background:url(../image/catemenubg.png) repeat-y #FFF; position:absolute; left:200px; top:0px; z-index: 1000;}
 .headNav .navCon .navCon-cate .cateMenu .list-item .itemleft{ width:410px; float:left;}
 .headNav .navCon .navCon-cate .cateMenu .list-item .itemright{ width:220px; float:right;}
 .headNav .navCon .navCon-cate .cateMenu .list-item dl{ padding-left:10px;}
@@ -199,7 +196,7 @@ PADDING-TOP: 0px;
 .cartinfo .cartright
 {
 	background:url(../images/cart_right.gif) no-repeat right;
-	
+	cursor:pointer;
 	float:left;
 }
 
@@ -212,7 +209,7 @@ PADDING-TOP: 0px;
 }
 /************************登录**********************************/
 
-#userlogin { width:60px; position:absolute; margin-top:-35px; right:120px; z-index:100;}
+#userlogin { width:60px; position:absolute; margin-top:-35px; right:110px; z-index:100;}
 #topnav { padding:10px 0px 12px; font-size:11px; line-height:23px; text-align:right; }
 #topnav a.signin { background:#C8C8C8; padding:4px 6px 6px; text-decoration:none; font-weight:bold; color:#fff; -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px; *background:transparent url("../images/signin-nav-bg-ie.png") no-repeat 0 0; *padding:4px 12px 6px;}
 #topnav a.signin:hover { background:#969696;  *background:transparent url("../images/signin-nav-bg-hover-ie.png") no-repeat 0 0; *padding:4px 12px 6px;}
@@ -227,6 +224,6 @@ color:#789; font-size:11px; }
 #signin_menu p { margin:0; }
 #signin_menu a { color:#6AC; }
 #signin_menu label { font-weight:normal; }
-#signin_submit { -moz-border-radius:4px; -webkit-border-radius:4px; background:#39d url('../images/bg-btn-blue.png') repeat-x scroll 0 0; border:1px solid #39D; color:#fff; text-shadow:0 -1px 0 #39d; padding:4px 10px 5px; font-size:11px; margin:0 5px 0 0; font-weight:bold; }
+#signin_submit { -moz-border-radius:4px; -webkit-border-radius:4px; background:#39d url('../images/bg-btn-blue.png') repeat-x scroll 0 0; border:1px solid #39D; color:#fff; text-shadow:0 -1px 0 #39d; padding:4px 10px 5px; font-size:11px; margin:0 5px 0 0; font-weight:bold; float: right;;}
 #signin_submit::-moz-focus-inner {padding:0;border:0;}
 #signin_submit:hover, #signin_submit:focus { background-position:0 -5px; cursor:pointer; }
