--- a/Public/css/css.css
+++ b/Public/css/css.css
@@ -200,7 +200,7 @@ a:hover{color:#FF6600;}
 	padding-left:40px;
 	font-size:x-large;
 	overflow: hidden;
-	background:url(../images/tb7.jpg) no-repeat;
+	background:url(../images/tb7.png) no-repeat;
 }
 .productAreaHead LI{
 	float:left;
