--- a/Public/css/hotnews_1.css
+++ b/Public/css/hotnews_1.css
@@ -315,7 +315,8 @@ q:before, q:after {
 blockquote, q {
 	quotes: "" "";
 }
-#news_title{
+#news_title,#notices_title{
 	 width:270px;
 	 height:30px;
 	}
+#tab1{margin-left:20px;}
