--- a/Public/css/h-n.css
+++ b/Public/css/h-n.css
@@ -1,79 +1,34 @@
 @charset "utf-8";
 /* CSS Document */
-/*************** Content Box ***************/
+/*************** 热点新闻 Content Box ***************/
 body{
 
                 font-family: Arial, Helvetica, sans-serif;
                 color: #555;
-
                 font-size: 12px;
 }
-/********************************      Elements styling      ********************************/
-
-h1, h2, h3, h4, h5, h6 {
-                font-family: Helvetica, Arial, sans-serif;
-                color: #222;
-                font-weight: bold;
-                }
-
-h1            { font-family: Calibri, Helvetica, Arial, sans-serif; font-size: 31px; font-weight: bold; color: #fff; 
-				  position: absolute; top: -1000px;  /* Remove this line and delete the logo (in the HTML) if you don't want an image as a logo */
-				}
-				
-h2            { font-size: 26px; padding: 0 0 10px 0; }
-h3            { font-size: 17px; padding: 0 0 10px 0; }
-h4            { font-size: 16px; padding: 0 0 5px 0; }
-h5            { font-size: 14px; padding: 0 0 5px 0; }
-h6            { font-size: 12px; padding: 0 0 5px 0; }
-
-
 a              { color: #57a000; text-decoration: none; }
 a:hover     { color: #000; }
 a:active     { color: #777; }
 a:focus     { outline: 1px; }
+/*×××××××××××××××××××××××××××××××首页布局×××××××××××××××××××××××××××××××××××*/
+#head {
+	/*background-color: #6F6;*/
+	height: 143px;
+	width: 100%;
+}
 
-strong       { font-weight: bold; color: #333; }
-
-small   		{ font-size: 0.85em; }
-
-pre           { font-family: monospace; }
-
-p {
-                padding: 5px 0 10px 0;
-                line-height: 1.6em;
-                }
-/************ Layout ************/
-
+#foot {
+	height: 270px;
+	width: 100%;
+	margin-top:5px;
+}
 #main-content {
-                margin: 0 30px 0 45px;
+                width:1200px;
+                margin: 0 auto;
                 padding: 40px 0 0 0;
-                }                margin: 0 30px 0 260px;
-                padding: 40px 0 0 0;
-                }
-/************ Lists ************/
-
-#main-content ul,
-#main-content ol {
-                padding: 10px 0;
                 }
 
-/* Unordered List */
-
-#main-content ul li {
-                background: url('../images/icons/bullet_black.png') center left no-repeat;
-                padding: 4px 0 4px 20px;
-                }
-
-/* Ordered List */
-
-#main-content ol {
-                padding: 0 0 0 24px;
-                }
-
-#main-content ol li {
-                list-style: decimal;
-                padding: 4px 0;
-                }
 .content-box {
                 border: 1px solid #ccc;
                 margin: 0 0 20px 0;
@@ -130,7 +85,6 @@ ul.content-box-tabs li a.current {
                 font-size: 13px;
                 border-top: 1px solid #ccc;
                 }
-                
 /************ Table ************/
 
 #main-content table {
@@ -169,34 +123,7 @@ ul.content-box-tabs li a.current {
 #main-content table tfoot td .bulk-actions select {
                 padding: 4px;
 				border: 1px solid #ccc;
-                }      
-				
-/*************** Pagination ***************/
-
-#main-content .pagination {
-                text-align: right;
-                padding: 20px 0 5px 0;
-                font-family: Verdana, Arial, Helvetica, sans-serif;
-                font-size: 10px;
-                }
-.pagination a {
-                margin: 0 5px 0 0;
-                padding: 3px 6px;
-                }
-
-.pagination a.number {
-				border: 1px solid #ddd;
-                }
-
-.pagination a.current {
-                background: #469400 url('../images/bg-button-green.gif') top left repeat-x !important;
-                border-color: #459300 !important;
-                color: #fff !important;
-                }
-				
-.pagination a.current:hover {
-				text-decoration: underline;
-                }
+                }  
 /********************************      General Classes      ********************************/
 
 .clear {
@@ -209,119 +136,4 @@ ul.content-box-tabs li a.current {
 				
 .align-right {
                 float: right;
-                }
-
-/**************invaild&reset.css*****************/
-
-.button,
-#main-content table tfoot td .bulk-actions select,
-.pagination a.number,
-form input.text-input,
-form textarea,
-form .wysiwyg,
-form select,
-.dp-popup {
-                -moz-border-radius: 4px;
-                -webkit-border-radius: 4px;
-				border-radius: 4px;
-			}
-			
-.content-box,
-.content-box-header,
-ul.content-box-tabs li a.current,
-.shortcut-button,
-.notification {
-                -moz-border-radius: 6px;
-                -webkit-border-radius: 6px;
-				border-radius: 6px;
-                }
-
-.content-box-header {
-                -moz-border-radius-bottomleft: 0;
-                -moz-border-radius-bottomright: 0;
-                -webkit-border-bottom-left-radius: 0;
-                -webkit-border-bottom-right-radius: 0;
-				border-bottom-left-radius: 0;
-				border-bottom-right-radius: 0;
-                }
-				
-.closed-box .content-box-header {
-                -moz-border-radius-bottomleft: 6px;
-                -moz-border-radius-bottomright: 6px;
-                -webkit-border-bottom-left-radius: 6px;
-                -webkit-border-bottom-right-radius: 6px;
-				border-bottom-left-radius: 6px;
-				border-bottom-right-radius: 6px;
-                }
-
-ul.content-box-tabs li a.current {
-                -moz-border-radius-bottomleft: 0;
-                -moz-border-radius-bottomright: 0;
-                -webkit-border-bottom-left-radius: 0;
-                -webkit-border-bottom-right-radius: 0;
-				border-bottom-left-radius: 0;
-				border-bottom-right-radius: 0;
-                }
-				
-
-.shortcut-button span {
-                -moz-border-radius: 7px;
-                -webkit-border-radius: 7px;
-				border-radius: 7px;
-                }
-				
-div.wysiwyg ul.panel li a { opacity: 0.6; }
-div.wysiwyg ul.panel li a:hover, div.wysiwyg ul.panel li a.active { opacity: 0.99; }
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-
-/* Eric Meyer's Reset Stylesheet: http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/ */
-
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-
-
-	border: 0;
-	outline: 0;
-	font-weight: inherit;
-	font-style: inherit;
-	font-size: 100%;
-	font-family: inherit;
-
-}
-/* remember to define focus styles! */
-:focus {
-	outline: 0;
-}
-
-ol, ul {
-	list-style: none;
-}
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-	border-collapse: separate;
-	border-spacing: 0;
-}
-caption, th, td {
-	text-align: left;
-	font-weight: normal;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: "";
-}
-blockquote, q {
-	quotes: "" "";
-}
-#news_title,#notice_title{
-	 width:270px;
-	 height:30px;
-	 
-	}
-#font{
-	font-size:33px;
-}
+                }                
